# gt_soft_test_task

./: CMakeLists.txt  README  client.cpp  client.h  main.cpp  main.qml  model.cpp  model.h
